--- a/LearnToCount/Base.lproj/Main.storyboard
+++ b/LearnToCount/Base.lproj/Main.storyboard
@@ -80,6 +80,7 @@
                                 <color key="backgroundColor" red="0.98431372549019602" green="0.9882352941176471" blue="0.61568627450980395" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" red="0.98431372549019602" green="0.9882352941176471" blue="0.61568627450980395" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Nah~"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5MV-U6-Qki">
                                 <rect key="frame" x="26" y="269" width="133" height="104"/>
@@ -118,10 +119,6 @@
                                 <rect key="frame" x="442" y="269" width="132" height="104"/>
                                 <color key="backgroundColor" red="0.9882352941176471" green="0.98039215686274506" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="AC"/>
-                                <connections>
-                                    <action selector="clearButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5ZR-RP-nuO"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNh-Pb-4ei">
                                 <rect key="frame" x="26" y="379" width="133" height="105"/>
@@ -160,10 +157,6 @@
                                 <rect key="frame" x="442" y="379" width="132" height="105"/>
                                 <color key="backgroundColor" red="0.9882352941176471" green="0.98039215686274506" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="DEL"/>
-                                <connections>
-                                    <action selector="delButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h9Y-Qq-AVb"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FGp-Kz-82V">
                                 <rect key="frame" x="26" y="490" width="133" height="104"/>
@@ -176,17 +169,14 @@
                                     <action selector="numberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fHr-qa-T7V"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra9-RH-jYF">
-                                <rect key="frame" x="165" y="490" width="132" height="104"/>
-                                <color key="backgroundColor" red="0.98780048076923077" green="0.97751924290049619" blue="0.73346541574713442" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="."/>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOf-SV-hbg">
                                 <rect key="frame" x="303" y="490" width="133" height="104"/>
                                 <color key="backgroundColor" red="0.98780048076923077" green="0.97751924290049619" blue="0.73346541574713442" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="-"/>
+                                <state key="normal" title="AC"/>
+                                <connections>
+                                    <action selector="clearButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FJZ-Xf-uqM"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iQ1-h4-QdQ">
                                 <rect key="frame" x="442" y="490" width="132" height="104"/>
@@ -203,6 +193,15 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra9-RH-jYF">
+                                <rect key="frame" x="165" y="490" width="132" height="104"/>
+                                <color key="backgroundColor" red="0.98780048076923077" green="0.97751924290049619" blue="0.73346541574713442" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="DEL"/>
+                                <connections>
+                                    <action selector="delButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Rz-4B-rsX"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
